<resources>
    <string name="app_name">WingIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="welcome">Hi!</string>
    <string name="create_account">Create an account</string>
    <string name="login">Log in</string>
    <string name="characteristics">Recipe characteristics</string>
    <string name="user_account_management_group_title">Account management</string>
    <string name="user_account_group_title">Edit Preferences</string>


    <!--Strings for the card on home page -->
    <string name="recipe_category1">Spicy Recipes</string>
    <string name="recipe_category2">Vegetarian Wings</string>
    <string name="recipe_category3">Dry Seasoning</string>

    <string name="first_card_category">Recipe category</string>
    <string name="first_card_description">Recipe description goes here</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>

    <!--Strings for the recipe page -->
    <string name="first_card_instruction">Instructions go here.</string>
    <string name="rate_recipe">Rate Recipe</string>
    <string name="recipe_instruction"><u>Recipe Instructions</u></string>

    <!--Strings for bottom navigation and toolbar title change -->
    <string name="home_title_toolbar">WingIt</string>
    <string name="favorites_title_toolbar">Your favorite recipes!</string>
    <string name="search_title_toolbar">Search for recipes</string>
    <string name="create_recipe_title_toolbar">Create recipe</string>
    <string name="local_venues_title_toolbar">Local venues</string>
    <string name="settings_title_toolbar">Settings</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="search_recipe_ingredients">Search Recipe Ingredients</string>
    <string name="search_recipe_title">Search Recipe Title</string>
    <string name="search_for_wings">Search for Wings</string>
    <string name="hungry_type_here">Hungry? Type Here!</string>

    <string-array name="spiciness_level_array">
        <item>0 (Not spicy at all)</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5 (Extremely spicy)</item>
    </string-array>


</resources>